Fix alignments
Fix the roles page
  move cs-sp-buttons outside of cs-sp-container
  fix spacing of html template
Bump toolkit to fix extension range alignment
Adjust alignment for shared line input

--- a/app/modules/core/setupWizard/_setup-wizard.scss
+++ b/app/modules/core/setupWizard/_setup-wizard.scss
@@ -30,7 +30,7 @@
     .col-trial {
       background: $brand-warning;
       padding: 0;
-       
+
     }
     .col-trial-header {
       padding: 20px 15px 0 15px;
@@ -260,9 +260,6 @@
         margin-bottom: 10px;
       }
 
-      .form-group {
-        margin-bottom: 5px;
-      }
     }
 
     .service-setup-extension-range {
