--- a/app/modules/huron/lineSettings/_line-settings.scss
+++ b/app/modules/huron/lineSettings/_line-settings.scss
@@ -9,10 +9,6 @@
   margin-bottom: 20px;
 }
 
-.inline {
-  display: inline-flex;
-}
-
 .confirmation-body {
   .warning-icon {
     @extend .icon;
